Fixed benchmark report not covering all features and adjustments. Added Exploration scenario and update benchmark scenarios. Improved simulation distance features and set default to AUTO with better load-based adjustments.